--- a/LeParcAuto/pom.xml
+++ b/LeParcAuto/pom.xml
@@ -96,6 +96,12 @@
 	  <version>0.9.3</version>
 	  <type>jar</type>
 	 </dependency>
+	 <dependency>
+	  <groupId>junit</groupId>
+	  <artifactId>junit</artifactId>
+	  <version>4.10</version>
+	  <scope>test</scope>
+	 </dependency>
 	</dependencies>
 
 	<build>
